# StraKLIP

./: README.md  README.rst  README.rts  api.rst  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  straklip_old.yaml  straklip_update.yaml
Tutorial/: analysis.ipynb  data_reduction.ipynb  psf_subtraction.ipynb
Tutorial/pipeline_logs/: pipe.yaml
bk/: conf.py  pyproject.toml  readthedocs.yml  requirements.txt
docs/: conf.py  index.rst  tutorial.rst  usage.rst
docs/source/: Attribution.rst  Contact.rst  StraKLIP.rst  api.rst  conf.py  index.rst  installation.rst  modules.rst  quick_start.rst  requirements.txt  tutorials.rst
scripts/: skpipe.py
straklip/: __init__.py  _version.py  analysis.py  cancar.py  config.py  contrast_curves.py  dataframe.py  extract_companion.py  fake_star.py  input_tables.py  photometry.py  showroom.py  stralog.py  stralog.yaml  tiles.py
straklip/config/: logging.yaml
straklip/steps/: __init__.py  analysis.py  buildfphdf.py  buildhdf.py  fow2cells.py  fpanalysis.py  klipphotometry.py  mkcompleteness.py  mkphotometry.py  mktiles.py  psfsubtraction.py
straklip/template/: Show_binaries.ipynb  data.yaml  join_catalogues.ipynb  pipe.yaml
straklip/templates/: Show_binaries.ipynb  recenter_close_binary.ipynb
straklip/test/: Jack_knife_test.py  config_test.py  contrast_curves.py  contrast_curves_test.py  corected_contrast_curves_test.py  extract_companion.py  extract_companion_test.py  get_Av_test.py  load_test.py  logging_test.py  mktiles_test.py  photometry_test.py  save_df_test.py  shapiro_test.py  show_cmd.ipynb  (+1 more)
(+35 files in other folders)
