#[build-system]
#requires = ["setuptools>=42", "wheel"]
#build-backend = "setuptools.build_meta"

[project]
name = "StraKLIP"
description = 'Data reduction pipeline for HST widefield imaging'
readme = "README.rst"
dynamic = ["version", "dependencies"] # version will come from setuptools.scm
authors = [
  { name="Giovanni M. Strampelli", email="gstrampelli@stsci.edu" },
  { name="StraKLIP: A Novel Pipeline for Detection and Characterization of Close-in Faint Companions through the Karhunen-Loéve Image Processing Algorithm"},
]


[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "straklip/_version.py"

[tool.setuptools.dynamic]
dependencies = {file = ['requirements.txt']}
